--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   cached_network_image: ^3.2.0
   image_picker: ^0.8.4+5
   otp_text_field: ^1.1.1
+  firebase_core: ^1.12.0
+  flutter_local_notifications: ^9.2.0
+  firebase_messaging: ^11.2.6
+  rxdart:
 
 
   # The following adds the Cupertino Icons font to your application.
